# research2report

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_TEST.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_rag_doc.md  setup.cfg  test_api.py  test_api_complete.py
.github/workflows/: ci.yml
docs/: README.md  installation.md
src/: main.py
src/agentic_rag/: README.md  __init__.py  main.py  run_server.py
src/agentic_rag/agents/: __init__.py  generator.py  managers.py  query_analyzer.py  retriever.py  types.py  web_search.py
src/agentic_rag/agents/config/: __init__.py  generator.yaml  query_analyzer.yaml  retriever.yaml  web_search.yaml
src/agentic_rag/client/: __init__.py  api_client.py
src/agentic_rag/config/: EMBEDDING_README.md  README.md  __init__.py  embeddings.py  models.py
src/agentic_rag/core/: __init__.py  model.py  workflow.py
src/agentic_rag/server/: __init__.py  api.py  types.py
src/agentic_rag/tools/: __init__.py  web_search.py
src/agentic_rag/utils/: __init__.py  document_processing.py  health_checks.py
src/ai_trends_report/: main.py
src/ai_trends_report/crews/ContentGeneration_crew/: content_generation_crew.py
src/ai_trends_report/crews/ContentGeneration_crew/config/: agents.yaml
src/ai_trends_report/crews/DataExtraction_crew/config/: agents.yaml
src/ai_trends_report/crews/TrendDiscovery_crew/: trend_discovery_crew.py
src/ai_trends_report/crews/TrendDiscovery_crew/config/: tasks.yaml
src/ai_trends_report/tools/: github_tool.py
src/crews/ContentGeneration_crew/config/: tasks.yaml
src/crews/DataExtraction_crew/: data_extraction_crew.py
src/crews/DataExtraction_crew/config/: tasks.yaml
src/crews/TrendDiscovery_crew/config/: agents.yaml
src/tools/: arxiv_tool.py  search_tool.py
