[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_trends_report"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "AI Agent system that generates weekly AI trends reports"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
kickoff = "ai_trends_report.main:kickoff"
plot = "ai_trends_report.main:plot"

[tool.crewai]
type = "flow"
