[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic_rag"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "AI Agent system that generates weekly AI trends reports"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
kickoff = "agentic_rag.main:kickoff"
plot = "agentic_rag.main:plot"

[tool.crewai]
type = "flow"
